@@ -1,3 +1,9 @@
+2012-09-14  Khoo Yit Phang  <khooyp@cs.umd.edu>
+
+	Point contrib/cc-with-tweaks.sh to the build-local data-directory.
+	* contrib/cc-with-tweaks.sh (GDB): Add -data-directory
+	data-directory as appropriate.
+
 2012-09-14  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	* printcmd.c (ui_printf): Eliminate single-use variable
